--- a/Dory/src/main/resources/application.properties
+++ b/Dory/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/dorydb?useSSL=false&&useLegacy
 spring.datasource.username=dory
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jmx.default-domain=Dory
